Fixed letter spacing of a title

--- a/assets/css/3-sections/topstories-home.sass
+++ b/assets/css/3-sections/topstories-home.sass
@@ -22,11 +22,12 @@ section.top-stories
   .more-headlines
     height: auto
 
-    h1
+    .title
       font-size: 14px
       font-weight: 700
       margin: 0
       text-transform: uppercase
+      letter-spacing: 0.01em
 
 
 
